--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,15 +1,49 @@
 version: '3.1'
 services:
   stats-server:
+    build: ./stats-service/stats-server
+    image: stats-server
+    container_name: stats-server
     ports:
       - "9090:9090"
-
+    depends_on:
+      - stats-db
+    environment:
+      - SPRING_DATASOURCE_DRIVER_CLASS_NAME=org.postgresql.Driver
+      - SPRING_DATASOURCE_URL=jdbc:postgresql://stats-db:5432/stats
+      - SPRING_DATASOURCE_USERNAME=root
+      - SPRING_DATASOURCE_PASSWORD=root
   stats-db:
     image: postgres:14-alpine
-
+    container_name: stats-db
+    ports:
+      - "6541:5432"
+    environment:
+      - POSTGRES_DB=stats
+      - POSTGRES_USER=root
+      - POSTGRES_PASSWORD=root
+#--------------------------------------------------------------------
   ewm-service:
+    build: ./main-service
+    image: main-service
+    container_name: main-service
     ports:
       - "8080:8080"
-
+    depends_on:
+     - ewm-service-db
+     - stats-server
+    environment:
+      - SPRING_DATASOURCE_URL=jdbc:postgresql://ewm-service-db:5432/ewm
+      - SPRING_DATASOURCE_USERNAME=root
+      - SPRING_DATASOURCE_PASSWORD=root
+      - STATS_SERVER_URL=http://stats-server:9090
+#--------------------------------------------------------------------
   ewm-db:
     image: postgres:14-alpine
+    container_name: ewm-service-db
+    ports:
+      - "6542:5432"
+    environment:
+        - POSTGRES_DB=ewm
+        - POSTGRES_USER=root
+        - POSTGRES_PASSWORD=root
