--- a/stats-service/stats-server/src/main/resources/application.properties
+++ b/stats-service/stats-server/src/main/resources/application.properties
@@ -8,7 +8,7 @@ spring.mvc.format.date-time=yyyy-MM-dd HH:mm:ss
 #---
 #spring.config.activate.on-profile=ci,test
 spring.datasource.driverClassName=${SPRING_DATASOURCE_DRIVER_CLASS_NAME:org.h2.Driver}
-spring.datasource.url=${SPRING_DATASOURCE_URL:jdbc:h2:mem:statistics;MODE=PostgreSQL}
+spring.datasource.url=${SPRING_DATASOURCE_URL:jdbc:h2:mem:stats;MODE=PostgreSQL}
 spring.datasource.username=${SPRING_DATASOURCE_USERNAME:root}
 spring.datasource.password=${SPRING_DATASOURCE_PASSWORD:root}
 stats-server.url=${STATS_SERVER_URL:http://localhost:9090/}
