--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,49 +1,51 @@
-version: '3.1'
+version: '3.8'
 services:
-  stats-server:
+  ewm-stats-server:
     build: ./stats-service/stats-server
-    image: stats-server
-    container_name: stats-server
+    image: ewm-stats-server
+    container_name: ewm-stats-server
     ports:
       - "9090:9090"
     depends_on:
-      - stats-db
+      - ewm-stats-db
     environment:
       - SPRING_DATASOURCE_DRIVER_CLASS_NAME=org.postgresql.Driver
-      - SPRING_DATASOURCE_URL=jdbc:postgresql://stats-db:5432/stats
+      - SPRING_DATASOURCE_URL=jdbc:postgresql://ewm-stats-db:5432/ewm-stats
       - SPRING_DATASOURCE_USERNAME=root
       - SPRING_DATASOURCE_PASSWORD=root
-  stats-db:
+#---------------------------------------------------------------------
+  ewm-stats-db:
     image: postgres:14-alpine
-    container_name: stats-db
+    container_name: ewm-stats-db
     ports:
       - "6541:5432"
     environment:
-      - POSTGRES_DB=stats
+      - POSTGRES_DB=ewm-stats
       - POSTGRES_USER=root
       - POSTGRES_PASSWORD=root
 #--------------------------------------------------------------------
-  ewm-service:
+  ewm-main-service:
     build: ./main-service
-    image: main-service
-    container_name: main-service
+    image: ewm-main-service
+    container_name: ewm-main-service
     ports:
       - "8080:8080"
     depends_on:
-     - ewm-service-db
-     - stats-server
+     - ewm-stats-server
+     - ewm-main-service-db
     environment:
-      - SPRING_DATASOURCE_URL=jdbc:postgresql://ewm-service-db:5432/ewm
+      - SPRING_DATASOURCE_DRIVER_CLASS_NAME=org.postgresql.Driver
+      - SPRING_DATASOURCE_URL=jdbc:postgresql://ewm-main-service-db:5432/ewm-main-service
       - SPRING_DATASOURCE_USERNAME=root
       - SPRING_DATASOURCE_PASSWORD=root
       - STATS_SERVER_URL=http://stats-server:9090
 #--------------------------------------------------------------------
-  ewm-db:
+  ewm-main-service-db:
     image: postgres:14-alpine
-    container_name: ewm-service-db
+    container_name: ewm-main-service-db
     ports:
       - "6542:5432"
     environment:
-        - POSTGRES_DB=ewm
+        - POSTGRES_DB=ewm-main-service
         - POSTGRES_USER=root
         - POSTGRES_PASSWORD=root
