--- a/pom.xml
+++ b/pom.xml
@@ -13,7 +13,8 @@
 	<name>Explore With Me</name>
     <modules>
         <module>stats-service</module>
-    </modules>
+		<module>main-service</module>
+	</modules>
 
     <groupId>ru.practicum</groupId>
 	<artifactId>explore-with-me</artifactId>
@@ -22,6 +23,8 @@
 
 	<properties>
 		<java.version>11</java.version>
+		<maven.compiler.source>11</maven.compiler.source>
+		<maven.compiler.target>11</maven.compiler.target>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 	</properties>
 
