--- a/stats-service/stats-server/src/main/resources/application.properties
+++ b/stats-service/stats-server/src/main/resources/application.properties
@@ -1,4 +1,5 @@
 server.port=9090
+#stats-server.url=${STATS_SERVER_URL:http://localhost:9090}
 spring.jpa.hibernate.ddl-auto=none
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQL10Dialect
 spring.jpa.properties.hibernate.format_sql=true
@@ -11,4 +12,3 @@ spring.datasource.driverClassName=${SPRING_DATASOURCE_DRIVER_CLASS_NAME:org.h2.D
 spring.datasource.url=${SPRING_DATASOURCE_URL:jdbc:h2:mem:ewm-stats;MODE=PostgreSQL}
 spring.datasource.username=${SPRING_DATASOURCE_USERNAME:root}
 spring.datasource.password=${SPRING_DATASOURCE_PASSWORD:root}
-stats-server.url=${STATS_SERVER_URL:http://localhost:9090}
